# VtkRenderer

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.0778A79AF6FDCE22.idx
assets/: resources.qrc
cmake/: CopyMsys2RuntimeClosure.cmake
models/: plate.vtu
src/: App.cpp  App.h  AppIcon.rc  ColoringController.cpp  ColoringController.h  Main.cpp  MainWindow.cpp  MainWindow.h  ModelManager.cpp  ModelManager.h  NestedArrayInfo.cpp  NestedArrayInfo.h  PointArrayInfo.cpp  PointArrayInfo.h  VtuModelLoader.cpp  VtuModelLoader.h  main.cpp
src/widgets/ComponentSelectorWidget/: ComponentSelectorWidget.cpp  ComponentSelectorWidget.h
src/widgets/FilePickerWidget/: FilePickerWidget.cpp  FilePickerWidget.h
src/widgets/NestedSelectorWidget/: NestedSelectorWidget.cpp  NestedSelectorWidget.h
wix/: WixShortcutsPatch.xml
